--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .pixel-font {
   font-family: 'Press Start 2P', monospace;
   letter-spacing: 1px;
